{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 36,
  "lineage": "2df55498-9a31-b1b6-22e8-50c9da75ab30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b4e72b17337d6c1",
            "arn": "arn:aws:ec2:eu-west-1:307795694096:instance/i-0448c8fa46d455a60",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0448c8fa46d455a60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-server-key.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087ae1889f8ed5d32",
            "private_dns": "ip-10-0-1-69.eu-west-1.compute.internal",
            "private_ip": "10.0.1.69",
            "public_ip": "52.210.173.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058bd656cf03f5ed1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08532d7b4cf22b1b1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ad238af9fc43461",
            "tags": {
              "Name": "staging-my-server"
            },
            "tags_all": {
              "Name": "staging-my-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08532d7b4cf22b1b1"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-server-key",
            "aws_security_group.allow-ssh-web",
            "aws_subnet.my-subnet-public-1",
            "data.aws_ami.amazon-2-latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307795694096:internet-gateway/igw-0a95068a3dba80aa4",
            "id": "igw-0a95068a3dba80aa4",
            "owner_id": "307795694096",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-016eedafb04070f16"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307795694096:route-table/rtb-066e0af6410043645",
            "id": "rtb-066e0af6410043645",
            "owner_id": "307795694096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a95068a3dba80aa4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public-rt"
            },
            "tags_all": {
              "Name": "staging-public-rt"
            },
            "vpc_id": "vpc-016eedafb04070f16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bfaa0ab6ae2f725",
            "route_table_id": "rtb-066e0af6410043645",
            "subnet_id": "subnet-06ad238af9fc43461"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.public-rt",
            "aws_subnet.my-subnet-public-1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307795694096:security-group/sg-08532d7b4cf22b1b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08532d7b4cf22b1b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "188.244.16.154/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-web",
            "name_prefix": "",
            "owner_id": "307795694096",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow-ssh-web"
            },
            "tags_all": {
              "Name": "Allow-ssh-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-016eedafb04070f16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307795694096:subnet/subnet-06ad238af9fc43461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06ad238af9fc43461",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307795694096",
            "tags": {
              "Name": "staging-my-public-subnet-1"
            },
            "tags_all": {
              "Name": "staging-my-public-subnet-1"
            },
            "vpc_id": "vpc-016eedafb04070f16"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307795694096:vpc/vpc-016eedafb04070f16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084bc5838aa2a0ddb",
            "default_route_table_id": "rtb-0b9795d3c0fc7ce40",
            "default_security_group_id": "sg-07a84f7b333c99273",
            "dhcp_options_id": "dopt-0641759473545293e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-016eedafb04070f16",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b9795d3c0fc7ce40",
            "owner_id": "307795694096",
            "tags": {
              "Name": "staging-my-vpc"
            },
            "tags_all": {
              "Name": "staging-my-vpc"
            }
          }
        }
      ]
    }
  ]
}